# aiopluggy

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py
aiopluggy/: __init__.py  helpers.py  hook_caller.py  hook_impl.py  hookcaller.py  hooks.py  markers.py  multicall.py  multicall_wrapped.py  plugin_manager.py
docs/: Makefile  api_reference.rst  conf.py  index.rst  tutorial.rst
docs/examples/: firstexample.py
examples/: firstexample.py
tests/: conftest.py  plugin_namespace.py  test_helpers.py  test_markers.py  test_multicall_parallel.py  test_plugin_manager.py  test_pluginmanager.py
tests/multicall/: test_multicall_first.py  test_multicall_parallel.py
