[metadata]
author = Holger Krekel
author_email = holger@merlinux.eu
name = aiopluggy
version = attr: aiopluggy.VERSION
description = Plugin and hook calling mechanisms for python
long_description = file: README.rst
keywords = plugin, plug-in, async, asyncio
license = MIT license
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Framework :: AsyncIO
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/Amsterdam/aiopluggy
project_urls =
  Documentation = https://aiopluggy.readthedocs.io/en/latest/
  Source Code = https://github.com/Amsterdam/aiopluggy
setup_requires =
  pytest-runner
tests_require =
  pytest
  pytest-asyncio
  pytest-cov
python_requires = ~=3.5
extras_require =
  docs =
    Sphinx
    sphinx-autobuild
    sphinx-autodoc-typehints
    sphinx_rtd_theme
  test =
    pytest
    pytest-asyncio
    pytest-cov
packages = aiopluggy


[aliases]
test=pytest


[tool:pytest]
# Putting stuff here is the same as putting it in pytest.ini.
#addopts = --verbose
testpaths = tests
cache_dir = .pytest_cache
